WB dealer updates

--- a/_includes/sewer-dealers.html
+++ b/_includes/sewer-dealers.html
@@ -1159,7 +1159,25 @@
                 <div class="col-sm-4 dealer">
                   <h4>Kanro</h4>
                   <p>
-                  <span class="grey">Location:</span> Białystok, Poland<br/>
+                  <span class="grey">Location:</span> Białystok<br/>
+                  <span class="grey">Phone:</span> (+48) 85 749 51 55<br/>
+                  <span class="grey">Website:</span> <a href="http://www.kanro.pl" target="_blank">www.kanro.pl</a>
+                  </p>
+                </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
+            </li>
+            <li class="list-group-item">
+              <h2 id="sw-Sweden">Sweden</h2>
+              <div class="row first">
+                <div class="col-sm-4 dealer">
+                  <h4>AquaTeq Sweden AB</h4>
+                  <p>
+                  <span class="grey">Location:</span> Kalmar<br/>
                   <span class="grey">Phone:</span> (+48) 85 749 51 55<br/>
                   <span class="grey">Website:</span> <a href="http://www.kanro.pl" target="_blank">www.kanro.pl</a>
                   </p>
@@ -1264,30 +1282,35 @@
           <ul class="list-group">
             <li class="list-group-item">
               <div class="row first">
-                <div class="col-sm-4 dealer">
+                <div class="col-sm-4">
+                  <div class="dealer">
                     <h4>DCS Manufacturing Pty Ltd</h4>
-<p>
-<span class="text-info"><i class="fa fa-wrench"></i> <em>Authorized Repair Center</em></span><br />
-<span class="grey">Location:</span> Victoria, Australia<br/>
-<span class="grey">Phone:</span> (+61) 3 9775 1330<br/>
-<span class="grey">Website:</span> <a href="http://www.dcsmanufacturing.com.au" target="_blank">www.dcsmanufacturing.com.au</a>
-</p>
+                    <p>
+                    <span class="text-info"><i class="fa fa-wrench"></i> <em>Authorized Repair Center</em></span><br />
+                    <span class="grey">Location:</span> Victoria, Australia<br/>
+                    <span class="grey">Phone:</span> (+61) 3 9775 1330<br/>
+                    <span class="grey">Website:</span> <a href="http://www.dcsmanufacturing.com.au" target="_blank">www.dcsmanufacturing.com.au</a>
+                    </p>
+                  </div>
+                </div>
+                <div class="col-sm-4">
+                  <div class="dealer">
+                    <h4>Ozwide Pty Ltd Trading</h4>
+                    <p>
+                    <span class="grey">Location:</span> Queensland, Australia<br/>
+                    <span class="grey">Phone:</span> (+61) 1300 781 359<br/>
+                    <span class="grey">Website:</span> <a href="http://www.drainchem.com.au" target="_blank">www.drainchem.com.au</a>
+                    </p>
+                  </div>
                 </div>
                 <div class="col-sm-4 dealer">
-                    <h4>Drainchem Pty Ltd</h4>
-<p>
-<span class="grey">Location:</span> Queensland, Australia<br/>
-<span class="grey">Phone:</span> (+61) 1300 781 359<br/>
-<span class="grey">Website:</span> <a href="http://www.drainchem.com.au" target="_blank">www.drainchem.com.au</a>
-</p>
-                </div>
-                <div class="col-sm-4 dealer">
-                <h4>Sewer Equipment Co.</h4>
-<p>
-<span class="grey">Location:</span> Queensland, Australia<br/>
-<span class="grey">Phone:</span> (+61) 7 3396 1777<br/>
-<span class="grey">Website:</span> <a href="http://www.seca.com.au" target="_blank">www.seca.com.au</a>
-</p>
+                  <h4>Sewer Equipment Co.</h4>
+                  <p>
+                  <span class="grey">Location:</span> Queensland, Australia<br/>
+                  <span class="grey">Phone:</span> (+61) 7 3396 1777<br/>
+                  <span class="grey">Website:</span> <a href="http://www.seca.com.au" target="_blank">www.seca.com.au</a><br/>
+                  <small><em>Serving New Zealand</em></small>
+                  </p>
                 </div>
               </div>
               <div class="row">
