--- a/_includes/downhole-dealers.html
+++ b/_includes/downhole-dealers.html
@@ -1,66 +1,17 @@
 <!-- Downhole Tab Content -->
 <div role="tabpanel" class="tab-pane" id="downhole-tab">
-  <div class="row">
+  <div class="row margin-bottom-120">
     <table class="table table-responsive">
-        <tr>
-          <td>For questions related to the SpinCat line of downhole tools, contact <strong>Alan Charles</strong>.<br>
-            Phone: +1 (720) 219-0777<br>
-            Email: <a href="mailto:alan.charles@stoneagetools.com">alan.charles@stoneagetools.com</a></td>
-        </tr>
+      <tr>
+        <td>For questions related to the SpinCat line of downhole tools, contact <strong>Alan Charles</strong>.<br>
+          Phone: +1 (720) 219-0777<br>
+          Email: <a href="mailto:alan.charles@stoneagetools.com">alan.charles@stoneagetools.com</a></td>
+      </tr>
       <tr>
         <td>Select your region below to view a list of <span class="bold">downhole tools dealers</span>.</td>
       </tr>
-      </table>
+    </table>
     <div class="panel-group" id="accordion3" role="tablist" aria-multiselectable="true">
-      <div class="panel panel-default dealer-list">
-        <div class="panel-heading" role="tab" id="dh-us-heading">
-          <h4 class="panel-title">
-            <a role="button" data-toggle="collapse" data-parent="#accordion3" href="#dh-us" aria-expanded="false" aria-controls="dh-us">
-              United States <i class="fa fa-plus"></i>
-            </a>
-          </h4>
-        </div>
-        <div id="dh-us" class="panel-collapse collapse" role="tabpanel" aria-labelledby="dh-us">
-          <ul class="list-group">
-            <li class="list-group-item">
-              <div class="row first">
-                <div class="col-sm-4 dealer">
-                  <h4>P3 Oil Tools, Inc.</h4>
-                  <p>
-                    <span class="grey">Location:</span> Salt Lake City, Utah<br/>
-                    <span class="grey">Phone:</span> 801-598-3910<br/>
-                    <span class="grey">Website:</span> <a href="http://www.p3oiltools.com" target="_blank">www.p3oiltools.com</a></p>
-                </div>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="panel panel-default">
-        <div class="panel-heading" role="tab" id="heading-dh-asia">
-          <h4 class="panel-title">
-            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion3" href="#dh-asia" aria-expanded="false" aria-controls="dh-asia">
-              Asia <i class="fa fa-plus"></i>
-            </a>
-          </h4>
-        </div>
-        <div id="dh-asia" class="panel-collapse collapse" role="tabpanel" aria-labelledby="dh-asia">
-          <ul class="list-group">
-            <li class="list-group-item">
-              <div class="row first">
-                <div class="col-sm-4 dealer">
-                  <h4>Asia Waterjet Equipment</h4>
-                  <p>
-                    <span class="grey">Location:</span> Singapore<br/>
-                    <span class="grey">Phone:</span> +65 65708023<br/>
-                    <span class="grey">Website:</span> <a href="http://www.asiawaterjet.com" target="_blank">www.asiawaterjet.com</a>
-                  </p>
-                </div>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </div>
       <div class="panel panel-default">
         <div class="panel-heading" role="tab" id="heading-dh-canada">
           <h4 class="panel-title">
@@ -104,89 +55,6 @@
                     <span class="grey">Location:</span> Aberdeen, Scotland<br/>
                     <span class="grey">Phone:</span> +44 (0)1224 200125<br/>
                     <span class="grey">Website:</span> <a href="http://www.hydropulsion.com" target="_blank">www.hydropulsion.com</a>
-                  </p>
-                </div>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="panel panel-default">
-        <div class="panel-heading" role="tab" id="heading-dh-lamerica">
-          <h4 class="panel-title">
-            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion3" href="#dh-lamerica" aria-expanded="false" aria-controls="dh-lamerica">
-              Latin America <i class="fa fa-plus"></i>
-            </a>
-          </h4>
-        </div>
-        <div id="dh-lamerica" class="panel-collapse collapse" role="tabpanel" aria-labelledby="dh-lamerica">
-          <ul class="list-group">
-            <li class="list-group-item">
-              <div class="row first">
-                <div class="col-sm-4 dealer">
-                  <h4>Comuniv SA DE CV</h4>
-                  <p>
-                    <span class="grey">Location:</span> Cd. Madero, Mexico<br/>
-                    <span class="grey">Phone:</span> +52 (833) 2101747<br/>
-                    <span class="grey">Website:</span> <a href="http://www.comuniv.com.mx" target="_blank">www.comuniv.com.mx</a>
-                  </p>
-                </div>
-                <div class="col-sm-4 dealer">
-                  <h4>Tech Power S.A. DE C.V.</h4>
-                  <p>
-                    <span class="grey">Location:</span> Guadalajara, Jalisco<br/>
-                    <span class="grey">Phone:</span> +33 3563 6250<br/>
-                    <span class="grey">Website:</span> <a href="www.techpowersa.com" target="_blank">www.techpowersa.com</a>
-                  </p>
-                </div>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="panel panel-default">
-        <div class="panel-heading" role="tab" id="heading-dh-mideast">
-          <h4 class="panel-title">
-            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion3" href="#dh-mideast" aria-expanded="false" aria-controls="dh-mideast">
-              Middle East <i class="fa fa-plus"></i>
-            </a>
-          </h4>
-        </div>
-        <div id="dh-mideast" class="panel-collapse collapse" role="tabpanel" aria-labelledby="dh-mideast">
-          <ul class="list-group">
-            <li class="list-group-item">
-              <div class="row first">
-                <div class="col-sm-4 dealer">
-                  <h4>Asia Waterjet Equipment</h4>
-                  <p>
-                    <span class="grey">Location:</span> Dubai, UAE<br/>
-                    <span class="grey">Phone:</span> + 9714 8861878<br/>
-                    <span class="grey">Website:</span> <a href="www.asiawaterjet.com" target="_blank">www.asiawaterjet.com</a>
-                  </p>
-                </div>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="panel panel-default">
-        <div class="panel-heading" role="tab" id="heading-dh-pacific">
-          <h4 class="panel-title">
-            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion3" href="#dh-pacific" aria-expanded="false" aria-controls="dh-pacific">
-              South Pacific <i class="fa fa-plus"></i>
-            </a>
-          </h4>
-        </div>
-        <div id="dh-pacific" class="panel-collapse collapse" role="tabpanel" aria-labelledby="dh-pacific">
-          <ul class="list-group">
-            <li class="list-group-item">
-              <div class="row first">
-                <div class="col-sm-4 dealer">
-                  <h4>WOMA Australia</h4>
-                  <p>
-                    <span class="grey">Location:</span> Australia (Nationwide)<br/>
-                    <span class="grey">Phone:</span> 08-9434 6622<br/>
-                    <span class="grey">Website:</span> <a href="www.woma.com.au" target="_blank">www.woma.com.au</a>
                   </p>
                 </div>
               </div>
