catchup web admin, incl. affiliations

--- a/_includes/landing.html
+++ b/_includes/landing.html
@@ -9,7 +9,7 @@ $(document).ready(function(){
       // Instantiate MixItUp:
       $('#Container').mixItUp({
         load: {
-          sort: 'name:asc'
+          sort: 'designation:asc name:asc'
         }
       });
       // Instantiate MixItUp:
