--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,6 @@
 <nav class="navbar navbar-default navbar-fixed-top">
   <!-- Utilities Nav -->
-  <div class="row utilities">
-    <div class="container">
+  <div class="row utilities"><div class="container">
       <div class="col-sm-4">
         <ul class="list-inline">
           <li>
