start again after stash bust

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,11 +1,17 @@
 <nav class="navbar navbar-default navbar-fixed-top">
   <!-- Utilities Nav -->
   <div class="row utilities"><div class="container">
-      <div class="col-sm-4">
+      <div class="col-sm-12 utils">
         <ul class="list-inline">
+          <li><a href="#" data-featherlight="#search-box"><img src="/assets/img/icon_search.png" alt="Search" style="margin-top:-4px;" /></a></li>
+          <li><a href="/contact">Find Us</a></li>
+          <li><a href="/rentals">Rentals</a></li>
+          <li><a href="/request-catalog">Request a Catalog</a></li>
+          <li><a href="http://portal.stoneagetools.com" target="_blank">Portal Login</a></li>
+          <li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting</a></li>
           <li>
             <div class="dropdown social-share">
-              <a href="#" class="dropdown-toggle" type="button" data-toggle="dropdown"><i class="fa fa-share-alt"></i> Social Media</a>
+              <a href="#" class="dropdown-toggle" type="button" data-toggle="dropdown">Social Media <i class="fa fa-share-alt"></i></a>
               <ul class="dropdown-menu">
                 <li><a href="https://www.youtube.com/channel/UCdK135J8Z9uHdG67eJ08LyA" target="_blank"><i class="fa fa-youtube-play"></i> YouTube</a></li>
                 <li><a href="https://www.facebook.com/Stoneagetools/" target="_blank"><i class="fa fa-facebook-official"></i> Facebook</a></li>
@@ -14,16 +20,6 @@
               </ul>
             </div>
           </li>
-        </ul>
-      </div>
-      <div class="col-sm-8 utils">
-        <ul class="list-inline">
-          <li><a href="/contact">Contact</a></li>
-          <li><a href="/rentals">Rentals</a></li>
-          <li><a href="/request-catalog">Request a Catalog</a></li>
-          <li><a href="http://dealer.stoneagetools.com" target="_blank">Portal Login</a></li>
-          <li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting</a></li>
-          <li><a href="#" data-featherlight="#search-box"><img src="/assets/img/icon_search.png" alt="Search" style="margin-top:-4px;" /></a></li>
         </ul>
         <div class="lightbox" id="search-box">
           <form action="search">
