reworking low hanging fruit and start slider

--- a/_includes/master-slider.html
+++ b/_includes/master-slider.html
@@ -20,7 +20,13 @@
   jQuery(document).ready(function() {    
     MasterSliderShowcase2.initMasterSliderShowcase2();
   });
+  
+  
+  jQuery(document).ready(function() {    
+    MasterSliderShowcase3.initMasterSliderShowcase3();
+  });
 </script>
+
 
 <!-- Toggle Accordions -->
 <script>
