--- a/_includes/nav-wb.html
+++ b/_includes/nav-wb.html
@@ -59,8 +59,8 @@
   <div class="row">
     <div class="wb-controls text-center">
       <label>Filter for:</label>
-      <a href="#exchanger" class="btn application">Exchangers</a>
-      <a href="#pipe" class="btn application">Pipes/Drains</a>
+      <a href="#exchanger" class="btn">Exchangers</a>
+      <a href="#pipe" class="btn">Pipes/Drains</a>
       <a href="#surface" class="btn">Surfaces</a>
       <a href="#tank" class="btn">Tanks/Vessels</a>
       <a href="#boiler" class="btn">Boilers/Furnaces</a>
