--- a/_includes/nav-wb.html
+++ b/_includes/nav-wb.html
@@ -6,6 +6,7 @@
           <li><a href="#" data-featherlight="#search-box"><img src="/assets/img/icon_search.png" alt="Search" style="margin-top:-4px;" /></a></li>
           <li><a href="/contact">Find Us</a></li>
           <li><a href="/rentals">Rentals</a></li>
+          <li><a href="/jobs">Careers</a></li>
           <li><a href="/request-catalog">Request a Catalog</a></li>
           <li><a href="http://portal.stoneagetools.com" target="_blank">Portal Login</a></li>
           <li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting</a></li>
