dealer and manual fixes

--- a/_includes/waterblast-dealers.html
+++ b/_includes/waterblast-dealers.html
@@ -102,9 +102,19 @@
                   <div class="dealer">
                     <h4>Advanced Pressure Systems</h4>
                     <p><span class="text-danger"><i class="fa fa-wrench"></i> <em>Authorized Parts &amp; Tools, No Automation</em></span><br />
+                    <span class="grey">Location:</span> La Porte<br/>
+                    <span class="grey">Phone:</span> 281-290-9951<br/>
+                    <span class="grey">Website:</span> <a href="http://www.advancedpressuresystems.com" target="_blank">www.advancedpressuresystems.com</a>
+                    </p>
+                  </div>
+                </div>
+                <div class="col-sm-4">
+                  <div class="dealer">
+                    <h4>Advanced Pressure Systems</h4>
+                    <p><span class="text-danger"><i class="fa fa-wrench"></i> <em>Authorized Parts &amp; Tools, No Automation</em></span><br />
                     <span class="grey">Location:</span> Tomball<br/>
                     <span class="grey">Phone:</span> 281-290-9950<br/>
-                    <span class="grey">Website:</span> <a href="http://www.waterblast.pro/" target="_blank">www.waterblast.pro</a>
+                    <span class="grey">Website:</span> <a href="http://www.advancedpressuresystems.com" target="_blank">www.advancedpressuresystems.com</a>
                     </p>
                   </div>
                 </div>
