htaccess fix and misc updates

--- a/_includes/sewer-dealers.html
+++ b/_includes/sewer-dealers.html
@@ -40,31 +40,32 @@
                 <li><a href="#ma" class="region">Massachusetts</a></li>
                 <li><a href="#mi" class="region">Michigan</a></li>
                 <li><a href="#mn" class="region">Minnesota</a></li>
-                <li><a href="#ne" class="region">Nebraska</a></li>
+                <li><a href="#mt" class="region">Montana</a></li>
               </ul>
             </div>
             <div class="dealers-by-region col-sm-2">
               <ul class="list-unstyled">
+                <li><a href="#ne" class="region">Nebraska</a></li>
                 <li><a href="#nj" class="region">New Jersey</a></li>
                 <li><a href="#ny" class="region">New York</a></li>
                 <li><a href="#nc" class="region">North Carolina</a></li>
                 <li><a href="#oh" class="region">Ohio</a></li>
                 <li><a href="#ok" class="region">Oklahoma</a></li>
-                <li><a href="#or" class="region">Oregon</a></li>
               </ul>
             </div>
             <div class="dealers-by-region col-sm-2">
               <ul class="list-unstyled">
+                <li><a href="#or" class="region">Oregon</a></li>
                 <li><a href="#pa" class="region">Pennsylvania</a></li>
                 <li><a href="#sc" class="region">South Carolina</a></li>
                 <li><a href="#tn" class="region">Tennessee</a></li>
                 <li><a href="#tx" class="region">Texas</a></li>
                 <li><a href="#ut" class="region">Utah</a></li>
-                <li><a href="#va" class="region">Virginia</a></li>
               </ul>
             </div>
             <div class="dealers-by-region col-sm-2">
               <ul class="list-unstyled">
+                <li><a href="#va" class="region">Virginia</a></li>
                 <li><a href="#wa" class="region">Washington</a></li>
                 <li><a href="#wi" class="region">Wisconsin</a></li>
               </ul>
@@ -531,11 +532,29 @@
               <div class="row first">
                 <div class="col-sm-4 dealer">
                   <h4>MacQueen Equipment, Inc.</h4>
-<p>
-<span class="grey">Location:</span> St. Paul, MN<br/>
-<span class="grey">Phone:</span> 651 645 5726<br/>
-<span class="grey">Website:</span> <a href="http://www.macqueeneq.com" target="_blank">www.macqueeneq.com</a>
-</p>
+                  <p>
+                  <span class="grey">Location:</span> St. Paul, MN<br/>
+                  <span class="grey">Phone:</span> 651 645 5726<br/>
+                  <span class="grey">Website:</span> <a href="http://www.macqueeneq.com" target="_blank">www.macqueeneq.com</a>
+                  </p>
+                </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
+            </li>
+            <li class="list-group-item">
+              <h2 id="mt">Montana</h2>
+              <div class="row first">
+                <div class="col-sm-4 dealer">
+                  <h4>NorMont Equipment Co.</h4>
+                  <p>
+                  <span class="grey">Location:</span> Black Eagle, MT<br/>
+                  <span class="grey">Phone:</span> 406 453 4344<br/>
+                  <span class="grey">Website:</span> <a href="http://www.nmeqco.com" target="_blank">www.nmeqco.com</a>
+                  </p>
                 </div>
               </div>
               <div class="row text-right">
@@ -549,11 +568,11 @@
               <div class="row first">
                 <div class="col-sm-4 dealer">
                   <h4>Nebraska Environmental Products</h4>
-<p>
-<span class="grey">Location:</span> Lincoln, NE<br/>
-<span class="grey">Phone:</span> 402 435 0061<br/>
-<span class="grey">Website:</span> <a href="http://www.macqueeneq.com/nebraska-environmental-products/" target="_blank">www.macqueeneq.com/nebraska-environmental-products/</a>
-</p>
+                  <p>
+                  <span class="grey">Location:</span> Lincoln, NE<br/>
+                  <span class="grey">Phone:</span> 402 435 0061<br/>
+                  <span class="grey">Website:</span> <a href="http://www.macqueeneq.com/nebraska-environmental-products/" target="_blank">www.macqueeneq.com/nebraska-environmental-products/</a>
+                  </p>
                 </div>
               </div>
               <div class="row text-right">
