--- a/_includes/waterblast-dealers.html
+++ b/_includes/waterblast-dealers.html
@@ -433,9 +433,12 @@
               Europe <i class="fa fa-plus"></i>
             </a>
           </h4>
-        </div>
-        <div id="wb-europe" class="panel-collapse collapse" role="tabpanel" aria-labelledby="wb-europe">
+        </div>        
+        <div id="wb-europe" class="panel-collapse collapse" role="tabpanel" aria-labelledby="wb-europe">          
           <div class="dealers-by-region">
+            <p style="padding: 20px 20px 0 20px;">StoneAge Europe is pleased to serve our customers in the UK, Netherlands, Ireland, Czech Republic,<br> France, Switzerland, Germany, Austria, Belgium, and Luxembourg  directly from our UK branch.<br><strong><a href="/europe">View our StoneAge Europe page for full contact information.</a></strong></p>
+            <p style="padding: 0 20px 20px 20px;">Customers in other European regions can expect quality cutomer support from our Authorized Dealers.</p>
+            
             <ul class="list-inline">
               <li><a href="#Cyprus" class="region">Cyprus</a></li>
               <li><a href="#Denmark" class="region">Denmark</a></li>
@@ -695,13 +698,9 @@
               <h2 id="Brazil">Brazil</h2>
               <!-- 1st row -->
               <div class="row first">
-                <div class="col-sm-4">
+                <div class="col-sm-6">
                   <div class="dealer">
-                    <h4>Lemasa Industria e Comercio LTDA</h4>
-                    <p>
-                    <span class="grey">Location:</span> Indiatuba, Sau Paulo<br/>
-                    <span class="grey">Phone:</span> (+55) (19) 3936 8555<br/>
-                    <span class="grey">Website:</span> <a href="http://www.lemasa.com.br" target="_blank">www.lemasa.com.br</a>
+                    <p>StoneAge is pleased to sell direct to our customers in Brazil.<br><strong>Please contact our Sales &amp; Support Team at +1 (970) 259-2869</strong>.
                     </p>
                   </div>
                 </div>
