--- a/_includes/contact-houston.html
+++ b/_includes/contact-houston.html
@@ -4,7 +4,7 @@
 <script>
   function initialize() {
     var mapOptions = {
-      center: new google.maps.LatLng(29.6669671,-95.0195486),
+      center: new google.maps.LatLng(29.6801084,-95.1667982),
       zoom: 8,
       mapTypeId: google.maps.MapTypeId.TERRAIN,
       scrollwheel: false,
@@ -18,7 +18,7 @@
       rotateControl: true,
     };
     var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
-    var contentString = 'StoneAge Houston &bull; 301 E Main St. &bull; La Porte, TX 77571';
+    var contentString = 'StoneAge Houston &bull; 2150 Pansy St. &bull; Pasadena, TX 77503';
     var infowindow = new google.maps.InfoWindow({
       content: contentString
     });
