spec updated per Matt H

--- a/_includes/waterblast-dealers.html
+++ b/_includes/waterblast-dealers.html
@@ -319,10 +319,11 @@
               <h2 id="skorea">South Korea</h2>
               <div class="row first">
                 <div class="col-sm-4 dealer">
-                  <h4>JN Korea</h4>
+                  <h4>JN Korea (J-Yen Co., Ltd.)</h4>
                   <p>
                   <span class="grey">Location:</span> Sunchon, Junnam<br/>
-                  <span class="grey">Phone:</span> (+82) 61 723 4771
+                  <span class="grey">Phone:</span> (+82) 61 723 4771<br/>
+                  <span class="grey">Website:</span> <a href="http://www.jnkorea.co.kr/" target="_blank">www.jnkorea.co.kr</a>
                   </p>
                 </div>
               </div>
