AST-200-V2, Badger specs, etc

--- a/_includes/downhole-dealers.html
+++ b/_includes/downhole-dealers.html
@@ -13,6 +13,31 @@
     </table>
     <div class="panel-group" id="accordion3" role="tablist" aria-multiselectable="true">
       <div class="panel panel-default">
+        <div class="panel-heading" role="tab" id="heading-dh-asia">
+          <h4 class="panel-title">
+            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion3" href="#dh-asia" aria-expanded="false" aria-controls="dh-asia">
+              Asia <i class="fa fa-plus"></i>
+            </a>
+          </h4>
+        </div>
+        <div id="dh-asia" class="panel-collapse collapse" role="tabpanel" aria-labelledby="dh-asia">
+          <ul class="list-group">
+            <li class="list-group-item">
+              <div class="row first">
+                <div class="dealer">
+                    <h4>Nanjing Fedjetting Tech Co. Ltd</h4>
+                    <p><span class="text-danger"><i class="fa fa-wrench"></i> <em>Authorized Parts &amp; Tools, No Automation</em></span><br />
+                    <span class="grey">Location:</span> Nanjing, China<br/>
+                    <span class="grey">Phone:</span> (+86) 25 5215 7501<br/>
+                    <span class="grey">Website:</span> <a href="http://www.fedjetting.com/" target="_blank">www.fedjetting.com</a>
+                    </p>
+                  </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="panel panel-default">
         <div class="panel-heading" role="tab" id="heading-dh-canada">
           <h4 class="panel-title">
             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion3" href="#dh-canada" aria-expanded="false" aria-controls="dh-canada">
