--- a/_includes/waterblast-dealers.html
+++ b/_includes/waterblast-dealers.html
@@ -203,7 +203,7 @@
                 <div class="col-sm-4">
                   <div class="dealer">
                     <h4>Nanjing Fedjetting Tech Co. Ltd</h4>
-                    <p>
+                    <p><span class="text-danger"><i class="fa fa-wrench"></i> <em>Authorized Parts &amp; Tools, No Automation</em></span><br />
                     <span class="grey">Location:</span> Nanjing<br/>
                     <span class="grey">Phone:</span> (+86) 25 5215 7501<br/>
                     <span class="grey">Website:</span> <a href="http://www.fedjetting.com/" target="_blank">www.fedjetting.com</a>
