--- a/_includes/sewer-dealers.html
+++ b/_includes/sewer-dealers.html
@@ -915,10 +915,34 @@
         <div id="sw-asia" class="panel-collapse collapse" role="tabpanel" aria-labelledby="sw-asia">
           <div class="dealers-by-region">
             <ul class="list-inline">
+              <li><a href="#sw-China" class="region">China</a></li>
               <li><a href="#sw-India" class="region">India</a></li>
               <li><a href="#sw-Korea" class="region">Korea</a></li>
             </ul>
           </div>
+          <ul class="list-group">
+            <li class="list-group-item">
+              <h2 id="sw-China">China</h2>
+              <!-- 1st row -->
+              <div class="row first">
+                <div class="col-sm-4">
+                  <div class="dealer">
+                    <h4>Nanjing Fedjetting Tech Co. Ltd</h4>
+                    <p><span class="text-danger"><i class="fa fa-wrench"></i> <em>Authorized Parts &amp; Tools, No Automation</em></span><br />
+                    <span class="grey">Location:</span> Nanjing<br/>
+                    <span class="grey">Phone:</span> (+86) 25 5215 7501<br/>
+                    <span class="grey">Website:</span> <a href="http://www.fedjetting.com/" target="_blank">www.fedjetting.com</a>
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
+            </li>
+          </ul>
           <ul class="list-group">
             <li class="list-group-item">
               <h2 id="sw-India">India</h2>
