--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700,300,100' rel='stylesheet' type='text/css'>
   
   <!-- Basic Styles -->
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   
   <!-- Custom Styles -->
@@ -23,6 +23,6 @@
   <link href="/assets/plugins/tipuesearch/tipuesearch.css" type="text/css" rel="stylesheet"><!-- Tipue Search -->
   <link href="/assets/plugins/featherlight/featherlight.min.css" type="text/css" rel="stylesheet" /><!-- Lighbox -->
   
-  <link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/assets/css/media.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" type="text/css" href="{{ "/assets/css/main.css" | absolute_url }}">
+  <link rel="stylesheet" type="text/css" href="{{ "/assets/css/media.css" | absolute_url }}">
 </head>
