--- a/_includes/landing.html
+++ b/_includes/landing.html
@@ -2,7 +2,7 @@
 <!-- MixItUp -->
 <link href="/assets/plugins/mixitup/landing-mix.css" type="text/css" rel="stylesheet" />
 
-<script src="http://cdn.jsdelivr.net/jquery.mixitup/latest/jquery.mixitup.min.js"></script>
+<script src="https://cdn.jsdelivr.net/jquery.mixitup/latest/jquery.mixitup.min.js"></script>
 <script>
 $(document).ready(function(){
   $(function(){
