style guide, dealer profile, etc.

--- a/_includes/sewer-dealers.html
+++ b/_includes/sewer-dealers.html
@@ -1322,8 +1322,15 @@
           </h4>
         </div>
         <div id="sw-pacific" class="panel-collapse collapse" role="tabpanel" aria-labelledby="sw-pacific">
+          <div class="dealers-by-region">
+            <ul class="list-inline">
+              <li><a href="#Australia" class="region">Australia</a></li>
+              <li><a href="#NZ" class="region">New Zealand</a></li>
+            </ul>
+          </div>
           <ul class="list-group">
             <li class="list-group-item">
+              <h2 id="Australia">Australia</h2>
               <div class="row first">
                 <div class="col-sm-4">
                   <div class="dealer">
@@ -1338,30 +1345,36 @@
                 <div class="col-sm-4 dealer">
                   <h4>Sewer Equipment Co.</h4>
                   <p>
-                  <span class="grey">Location:</span> Queensland, Australia<br/>
-                  <span class="grey">Phone:</span> (+61) 7 3396 1777<br/>
+                  <span class="grey">Location:</span> NSW, Australia<br/>
+                  <span class="grey">Phone:</span> 02 9724 0433<br/>
                   <span class="grey">Website:</span> <a href="http://www.seca.com.au" target="_blank">www.seca.com.au</a><br/>
-                  <small><em>Serving New Zealand</em></small>
+<!--                  <small><em>Serving New Zealand</em></small>-->
+                  </p>
+                </div>
+                <div class="col-sm-4 dealer">
+                  <h4>Spoutvac Industries Pty Ltd</h4>
+                  <p>
+                  <!--<span class="text-info"><i class="fa fa-wrench"></i> <em>Authorized Repair Center</em></span><br />-->
+                  <span class="grey">Location:</span> Victoria, Australia<br/>
+                  <span class="grey">Phone:</span> (+61) 3 5443 4033<br/>
+                  <span class="grey">Website:</span> <a href="http://www.spoutvac.com.au/" target="_blank">www.spoutvac.com.au</a>
                   </p>
                 </div>
               </div>
-              <div class="row">
-                <div class="col-sm-4 dealer">
-                <h4>Sewer Equipment Co.</h4>
-<p>
-<span class="grey">Location:</span> Victoria, Australia<br/>
-<span class="grey">Phone:</span> (+61) 4 1436 1897<br/>
-<span class="grey">Website:</span> <a href="http://www.seca.com.au" target="_blank">www.seca.com.au</a>
-</p>
-                </div>
-                <div class="col-sm-4 dealer">
-                    <h4>Spoutvac Industries Pty Ltd</h4>
-<p>
-<!--<span class="text-info"><i class="fa fa-wrench"></i> <em>Authorized Repair Center</em></span><br />-->
-<span class="grey">Location:</span> Victoria, Australia<br/>
-<span class="grey">Phone:</span> (+61) 3 5443 4033<br/>
-<span class="grey">Website:</span> <a href="http://www.spoutvac.com.au/" target="_blank">www.spoutvac.com.au</a>
-</p>
+            </li>
+            <li class="list-group-item">
+              <h2 id="NZ">New Zealand</h2>
+              <!-- 1st row -->
+              <div class="row first">
+                <div class="col-sm-4">
+                  <div class="dealer">
+                    <h4>Kerrick</h4>
+                    <p>
+                    <span class="grey">Location:</span> Auckland, New Zealand<br/>
+                    <span class="grey">Phone:</span> (+64) 9 579 2674<br/>
+                    <span class="grey">Website:</span> <a href="http://www.kerrick.co.nz" target="_blank">www.kerrick.co.nz</a>
+                    </p>
+                  </div>
                 </div>
               </div>
             </li>
