--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1541,3 +1541,45 @@ li.whr-item>h3>a:before {
   margin-left: 0 !important;
   margin-top: 0 !important;
 }
+
+/**** style guide ****/
+.style-grid {
+  height:180px;
+  padding-right: 0;
+  padding-left: 0;
+}
+.style-grid a {
+  display: block;
+  width:100%; 
+  height: 100%;
+  text-align: center; 
+  line-height: 180px;
+  text-transform: uppercase;
+  letter-spacing: .15rem;
+  font-size: 150%;
+  font-weight: 300;
+  border-right: 3px solid #fff; 
+  border-bottom:3px solid #fff;
+  padding: 0 20px;
+}
+a.bg-bronze {
+  background-color: #a58c70;
+  color: #fff;
+}
+a.bg-bronze:hover {
+  background-color: #9c8061;
+}
+a.bg-grey {
+  background-color: #a1a1a1;
+  color: #fff;
+}
+a.bg-grey:hover {
+  background-color: #919191;
+}
+a.bg-lt-grey {
+  background-color: #e2e2e2;
+  color: #666;
+}
+a.bg-lt-grey:hover {
+  background-color: #d0d0d0;
+}
