new dev environment setup, update head file

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,12 +17,12 @@
   
   <!-- Custom Styles -->
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="/feed.xml">
   
   <!-- Plugin Styles -->
   <link href="/assets/plugins/tipuesearch/tipuesearch.css" type="text/css" rel="stylesheet"><!-- Tipue Search -->
   <link href="/assets/plugins/featherlight/featherlight.min.css" type="text/css" rel="stylesheet" /><!-- Lighbox -->
   
-  <link rel="stylesheet" type="text/css" href="{{ "/assets/css/main.css" | absolute_url }}">
-  <link rel="stylesheet" type="text/css" href="{{ "/assets/css/media.css" | absolute_url }}">
+  <link rel="stylesheet" type="text/css" href="/assets/css/main.css">
+  <link rel="stylesheet" type="text/css" href="/assets/css/media.css">
 </head>
