--- a/_includes/master-slider.html
+++ b/_includes/master-slider.html
@@ -60,7 +60,6 @@
 $(document).ready(function() {
  
   var owl = $("#owl-related");
- 
   owl.owlCarousel({
       items : 5, //10 items above 1000px browser width
       itemsDesktop : [1000,5], //5 items between 1000px and 901px
@@ -69,6 +68,18 @@ $(document).ready(function() {
       itemsMobile : false, // itemsMobile disabled - inherit from itemsTablet option
       slideSpeed : 1000,
       autoPlay : true
+  });
+  
+  var owl = $("#owl-culture");
+  owl.owlCarousel({
+      items : 4, //10 items above 1000px browser width
+      itemsDesktop : [1000,5], //5 items between 1000px and 901px
+      itemsDesktopSmall : [900,3], // betweem 900px and 601px
+      itemsTablet: [600,1], //2 items between 600 and 0
+      itemsMobile : false, // itemsMobile disabled - inherit from itemsTablet option
+      //slideSpeed : 400,
+      autoPlay : 3000,
+      pagination: false
   });
  
   // Custom Navigation Events
