dealer and manual updtaes

--- a/_includes/waterblast-dealers.html
+++ b/_includes/waterblast-dealers.html
@@ -543,6 +543,9 @@
                   <span class="grey">Phone:</span> (+39) 0427 799505<br/>
                   <span class="grey">Website:</span> <a href="http://www.nuovacontec.com" target="_blank">www.nuovacontec.com</a>
                   </p>
+                  <p>      
+                  <span class="text-info"><i class="fa fa-wrench"></i> <em>Authorized Repair Center</em></span><br />
+                  </p>
                 </div>
               </div>
               <div class="row text-right">
@@ -560,6 +563,9 @@
                   <span class="grey">Location:</span> Solbergelva<br/>
                   <span class="grey">Phone:</span> (+47) 32 27 36 00<br/>
                   <span class="grey">Website:</span> <a href="http://www.pumpsupply.no/" target="_blank">www.pumpsupply.no</a>
+                  </p>
+                  <p>      
+                  <span class="text-info"><i class="fa fa-wrench"></i> <em>Authorized Repair Center</em></span><br />
                   </p>
                 </div>
               </div>
@@ -632,6 +638,9 @@
                   <span class="grey">Location:</span> Holsbybrunn, Sweden<br/>
                   <span class="grey">Phone:</span> (+46) 383 50801<br/>
                   <span class="grey">Website:</span> <a href="http://www.aquajet.se" target="_blank">www.aquajet.se</a>
+                  </p>
+                  <p>      
+                  <span class="text-info"><i class="fa fa-wrench"></i> <em>Authorized Repair Center</em></span><br />
                   </p>
                 </div>
               </div>
@@ -875,6 +884,9 @@
                     <span class="grey">Phone:</span> (+971) 4 881 0060<br/>
                     <span class="grey">Website:</span> <a href="http://www.asiawaterjet.com" target="_blank">www.asiawaterjet.com</a>
                     </p>
+                    <p>      
+                    <span class="text-info"><i class="fa fa-wrench"></i> <em>Authorized Repair Center</em></span><br />
+                    </p>
                   </div>
                 </div>
               </div>
@@ -938,6 +950,9 @@
                     <span class="grey">Phone:</span> (+61) 3 9312 2388<br/>
                     <span class="grey">Website:</span> <a href="http://www.hammelmann.com.au" target="_blank">www.hammelmann.com.au</a>
                     </p>
+                    <p>      
+                    <span class="text-info"><i class="fa fa-wrench"></i> <em>Authorized Repair Center</em></span><br />
+                    </p>
                   </div>
                 </div>
                 <div class="col-sm-4">
@@ -957,6 +972,9 @@
                     <span class="grey">Location:</span> Perth, Western Australia<br/>
                     <span class="grey">Phone:</span> (+61) 8 9434 6622<br/>
                     <span class="grey">Website:</span> <a href="http://www.woma.com.au" target="_blank">www.woma.com.au</a>
+                    </p>
+                    <p>      
+                    <span class="text-info"><i class="fa fa-wrench"></i> <em>Authorized Repair Center</em></span><br />
                     </p>
                   </div>
                 </div>
